commit 836f424746f5234a32972e879896011bffc94bfe
Author: mats cronqvist <masse@klarna.com>
Date:   Wed Jan 16 13:31:38 2013 +0100

    autogenerate AUTHORS and ChangeLog

AUTHORS
ChangeLog
INSTALL
Makefile

commit 25471fee3fba64fdfd498aab2e201f146c3a6670
Author: mats cronqvist <masse@klarna.com>
Date:   Wed Jan 16 12:00:13 2013 +0100

    ...and unit test...

src/redbug_msc.erl

commit 23e5cb72de5e2abfc446c5bec74a75073af8ee87
Author: mats cronqvist <masse@klarna.com>
Date:   Wed Jan 16 11:46:43 2013 +0100

    better error message

src/redbug_msc.erl

commit 7c70afb36bf6e9126f2278481e877782eeb5c9de
Author: mats cronqvist <masse@klarna.com>
Date:   Wed Jan 16 10:25:41 2013 +0100

    redbug:start (normally) returns {no_of_matched_procs,no_of_matched_functions}

src/prfTrc.erl
src/redbug.erl

commit 830bff2462007b96173c738ce063415ae9c4b3a2
Author: mats cronqvist <masse@klarna.com>
Date:   Fri Jan 11 13:56:22 2013 +0530

    implemented 'blocking' option

src/redbug.erl

commit 8c5d9ab314eeda601205888e1561ecbbf6f7a6b2
Author: mats cronqvist <masse@klarna.com>
Date:   Fri Jan 11 06:37:31 2013 +0530

    cosmetic

src/redbug.erl

commit afd30bafc24e0fa2b39c201252a58eeb04920e60
Author: mats cronqvist <masse@klarna.com>
Date:   Fri Jan 11 06:17:32 2013 +0530

    prettied up print_fun

src/redbug.erl

commit 37a7e8da775ea12f706e1bab26b337ad9006454a
Author: mats cronqvist <masse@klarna.com>
Date:   Fri Jan 11 05:53:53 2013 +0530

    cosmetic

src/redbug.erl

commit be8d405b8d48422a568d36c9cb52148579aac3aa
Author: mats cronqvist <masse@klarna.com>
Date:   Thu Jan 10 17:47:04 2013 +0530

    generalized print_loop to take an accumulator

src/redbug.erl

commit a9d7acab0a655e269c6771c13f5d4ee22638dfc9
Author: mats cronqvist <masse@klarna.com>
Date:   Thu Jan 10 17:46:14 2013 +0530

    placeholder blocking mode

src/redbug.erl

commit 67b339a09fb3bb51b220e0fa7beff4b757ae2ef5
Author: mats cronqvist <masse@klarna.com>
Date:   Thu Jan 10 17:45:09 2013 +0530
