@@ -1,3 +1,13 @@
+commit 7f4dd38cf0de3598e321c708beba6f872e181b32
+Author: mats cronqvist <masse@klarna.com>
+Date:   Wed Jan 16 18:35:30 2013 +0100
+
+    cosmetic
+
+ChangeLog
+src/redbug.erl
+src/redbug_msc.erl
+
 commit 836f424746f5234a32972e879896011bffc94bfe
 Author: mats cronqvist <masse@klarna.com>
 Date:   Wed Jan 16 13:31:38 2013 +0100
